# shouldnottypecheck-bug

./: README.md  shouldnottypecheck-bug.cabal
test/Data/: BugSpec.hs
