name:                shouldnottypecheck-bug
version:             0.1.0.0
synopsis:            bug with shouldnottypecheck
license:             PublicDomain
author:              Noah Luck Easterly
maintainer:          noah.easterly@gmail.com
build-type:          Simple
cabal-version:       >=1.10

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  ghc-options: -Wall -Werror
  build-depends: base == 4.*
               , hspec == 2.*
               , should-not-typecheck >=2.1 && <3.0
               , deepseq >= 1.4.2.0 && <2.0
  other-modules: Data.BugSpec
  default-language: Haskell2010 
